2010-09-16  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #15497: [Caching framework] Remove tagIndex from memcached and apc backend

2010-09-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15531: jumpurl check fails if mime type is not known
	* Fixed bug #15529: jumpurl does not provide a proper download file name with space

2010-09-09  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15532: Memory leak when using old page cache

2010-09-06  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #15635: XHTML validity of backend when sys_action is loaded

2010-09-03  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15550: t3lib_error_Exception not available in some cases (Thanks to Stefan Galinski)

2010-08-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #14858: imageLinkWrap.JSwindow triggers XSS warning or Fails (Thanks to Jigal van Hemert)

2010-08-30  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15561: Add information about /dev/urandom to INSTALL.txt

2010-08-29  Francois Suter  <francois@typo3.org>

	* Fixed bug #14143: count_menuItems not working correctly (thanks to Frederic Gaus)

2010-08-29  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15525: Caching framework database backend does not free mysql resource in collectGarbage() (Thanks to Helmut Hummel)

2010-08-28  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15482: htmlArea RTE: Entering line breaks with Safari not possible in TYPO3 3.4.5
	* Updated htmlArea RTE version to 1.8.12

2010-08-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #1728: Comma separated list don't accept spaces at "db_layout" in the 'addTables' feature (thanks to Niels Pardon)

2010-08-22  Francois Suter  <francois@typo3.org>

	* Fixed bug #14949: "View Item" does not resolve real MM-relations (thanks to Caspar Stuebs)

2010-08-20  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #15514 Bugfix : wrong encoded confirm message in User Admin Module (Thanks to Sven Juergens)