@@ -115,10 +115,6 @@ class t3lib_autoloader {
 			} catch (LogicException $exception) {
 			}
 		}
-
-		if (!class_exists($className, false) && !interface_exists($className, false)) {
-			self::logLoadingFailure($className);
-		}
 	}
 
 	/**
@@ -173,21 +169,6 @@ class t3lib_autoloader {
 			self::$classNameToFileMapping = array_merge($extensionClassNameToFileMapping, self::$classNameToFileMapping);
 		} else {
 			self::$extensionHasAutoloadConfiguration[$extensionKey] = FALSE;
-		}
-	}
-
-	/**
-	 * Logs error message about failed autoloading
-	 *
-	 * @param	string	$className	Class name
-	 * @param	string	$filePath	File name
-	 * @return	void
-	 */
-	static protected function logLoadingFailure($className) {
-		$message = sprintf('Unable to autoload class "%s"', $className);
-		t3lib_div::sysLog($message, 'Core', 4);
-		if (TYPO3_DLOG) {
-			t3lib_div::devLog($message, 'Core', 3);
 		}
 	}
 }
