@@ -1,3 +1,7 @@
+2010-09-17  Steffen Gebert  <steffen@steffen-gebert.de>
+
+	* Fixed bug #15628: Remove logging when class loading failed in t3lib_autoloader (Thanks to Helmut Hummel)
+
 2010-09-16  Christian Kuhn  <lolli@schwarzbu.ch>
 
 	* Fixed bug #15497: [Caching framework] Remove tagIndex from memcached and apc backend
